catkin_ws/logs/firefly_control/build.make.181.log.stderr
/home/chris/catkin_ws/src/firefly_control/src/control.cpp: In member function ‘void control_fly::command_fly()’:
/home/chris/catkin_ws/src/firefly_control/src/control.cpp:73:17: error: ‘id’ was not declared in this scope
              << id << endl;
                 ^
make[2]: *** [CMakeFiles/control.dir/src/control.cpp.o] Error 1
make[1]: *** [CMakeFiles/control.dir/all] Error 2
make: *** [all] Error 2
